docs(claude): scope build/test toolchain to a module CLAUDE.md; trim root
Progressive-disclosure pass on the root CLAUDE.md (improve-claude), driven
by the gitignore constraint that `.claude/` is local-only -- so the only
team-shared agent config is root + scoped CLAUDE.md files.

- Extract build/test toolchain & environment quirks (JDK 25 / Maven / mise,
  native-access, Testcontainers stack, the Docker-socket HTTP 400 fix, the
  commons-codec pin, sandbox) into a new tracked ibmmq-jms-guide/CLAUDE.md.
  The +passid / 2035 report-PUT authority gotcha stays in root -- it is a
  deploy/MQSC concern and the most expensive fact to re-discover.
- Deduplicate "Validated facts": collapse the coordinate bullets that just
  duplicate research-output/phase-a-fact-sheet.md into a pointer + glance-level
  constants, while preserving the freshly-added currency pointers (pooled-jms
  tuning + ADR-0006/#25, MQMD field recovery #19).
- Replace the bare "Project layout" directory listing with the real Makefile
  harness entry points (make up/verify/doctor/console/down, make compose-up).

Root CLAUDE.md 85 -> 74 lines; all standing non-negotiable directives
(distributed mandate, currency, Mermaid, language/env policy) preserved.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>